tweaking styles, removing superfluous log lines

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,15 @@
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Overpass" rel="stylesheet">
 </head>
 <body>
-<h1>shitty autocomplete demo</h1>
-<app-root></app-root>
+<div class="container">
+  <h1>shitty autocomplete demo</h1>
+
+  <p>this angular application uses an autocomplete/typeahead to select a commit from a list of commits made against this
+    project on GitHub (see <a href="https://developer.github.com/v3/repos/commits/">the GitHub API developer site</a>
+    for more info on that).</p>
+
+  <app-root></app-root>
+</div>
+
 </body>
 </html>
