--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Boopahead</title>
-  <base href="/angular-typeahead-stuff/">
+  <title>autocomplete/typeahead thing</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Overpass" rel="stylesheet">
+  <style>
+    pre {    background-color: rgb(43, 43, 43);}
+    .ln { color: #606366; font-weight: normal; font-style: normal; }
+    .s0 { color: rgb(169,183,198); }
+    .s1 { color: rgb(232,191,106); }
+    .s2 { color: rgb(186,186,186); }
+    .s3 { color: rgb(165,194,97); }
+    .s4 { color: rgb(128,128,128); }
+  </style>
 </head>
 <body>
 <div class="container">
@@ -17,8 +26,41 @@
   <p>this angular application uses an autocomplete/typeahead to select a commit from a list of commits made against this
     project on GitHub (see <a href="https://developer.github.com/v3/repos/commits/">the GitHub API developer site</a>
     for more info on that).</p>
-
+  <h2>demo bit</h2>
+  <div style="padding: 25px;">
+    <p>type something into the input box to filter and use arrow keys + enter key to select an item.</p>
   <app-root></app-root>
+  </div>
+
+      <h2>angular template codez</h2>
+<pre><span class="s1">&lt;input
+    </span><span class="s2">type=</span><span class="s3">"text"</span><span class="s1">
+    </span><span class="s2">class=</span><span class="s3">"form-control"</span><span class="s1">
+    </span><span class="s2">[formControl]=</span><span class="s3">"commit"</span><span class="s1">
+    </span><span class="s2">[appTypeahead]=</span><span class="s3">"typeahead"</span><span class="s1">
+    </span><span class="s2">[displayWith]=</span><span class="s3">"displayFn"</span><span class="s1">&gt;</span><span class="s0">
+
+  </span><span class="s1">&lt;app-typeahead </span><span class="s2">#typeahead</span><span class="s1">&gt;</span><span class="s0">
+    </span><span class="s1">&lt;app-typeahead-option </span><span class="s2">*ngFor=</span><span class="s3">"let commit of (filteredOptions | async)" </span><span class="s2">[value]=</span><span class="s3">"commit.commit"</span><span class="s1">&gt;</span><span class="s0">
+      </span><span class="s1">&lt;span </span><span class="s2">class=</span><span class="s3">"message"</span><span class="s1">&gt;</span><span class="s0">{{commit.commit.message}}</span><span class="s1">&lt;/span&gt;</span><span class="s0">
+      </span><span class="s1">&lt;span </span><span class="s2">class=</span><span class="s3">"sha"</span><span class="s1">&gt;</span><span class="s0">{{shortSha(commit.sha)}}</span><span class="s1">&lt;/span&gt;</span><span class="s0">
+    </span><span class="s1">&lt;/app-typeahead-option&gt;</span><span class="s0">
+  </span><span class="s1">&lt;/app-typeahead&gt;</span></pre>
+      <h2>js codez</h2>
+      <pre><span class="s0">  ngOnInit(): </span><span class="s1">void </span><span class="s0">{
+    </span><span class="s1">this</span><span class="s0">.commit = </span><span class="s1">new </span><span class="s0">FormControl()</span><span class="s2">;</span><span class="s0">
+
+    </span><span class="s1">this</span><span class="s0">.options = </span><span class="s1">this</span><span class="s0">.http.get(</span><span class="s3">`https://api.github.com/repos/storkme/angular-typeahead-stuff/commits`</span><span class="s0">)
+      .map((response) =&gt; response.json())
+      .share()</span><span class="s2">;</span><span class="s0">
+
+    </span><span class="s1">this</span><span class="s0">.filteredOptions = Observable.combineLatest(
+      </span><span class="s1">this</span><span class="s0">.commit.valueChanges.startWith(</span><span class="s1">null</span><span class="s0">)</span><span class="s2">,</span><span class="s0">
+      </span><span class="s1">this</span><span class="s0">.options
+    )
+      .map(([val</span><span class="s2">, </span><span class="s0">options]) =&gt; val ? </span><span class="s1">this</span><span class="s0">.filter(val</span><span class="s2">, </span><span class="s0">options) : options.slice())</span><span class="s2">;</span><span class="s0">
+  }</span></pre>
+
 </div>
 
 </body>
