moving from commits to countries

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,10 @@
 </head>
 <body>
 <div class="container">
-  <h1>shitty autocomplete demo</h1>
+  <h1>free search select demo</h1>
 
-  <p>this angular application uses an autocomplete/typeahead to select a commit from a list of commits made against this
-    project on GitHub (see <a href="https://developer.github.com/v3/repos/commits/">the GitHub API developer site</a>
-    for more info on that).</p>
-  <h2>demo bit</h2>
   <div style="padding: 25px;">
-    <p>type something into the input box to filter and use arrow keys + enter key to select an item.</p>
+    <p>this component is useful for letting users select something from a large list. in the example search box below, search for a country in Europe.</p>
   <app-root></app-root>
   </div>
 
