updating html codez

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
 
       <h2>Component code [<a href="https://github.com/storkme/angular-typeahead-stuff/blob/master/src/app/app.component.ts">app.component.ts</a>]</h2>
-  <pre><span class="s0">
+  <pre class="js"><span class="s0">
 
   ngOnInit(): </span><span class="s1">void </span><span class="s0">{
     </span><span class="s1">this</span><span class="s0">.country = </span><span class="s1">new </span><span class="s0">FormControl()</span><span class="s2">;</span><span class="s0">
